1.0.0 (currently working on)
- [#3434] Cleanup: Replace false/true with FALSE/TRUE
- [#3458] Fix: Unregistration is not possible if allowRegistrationForEventsWithoutDate = 1
- [#3830] Fix: Number of vacancies is blank in the list view and single view for unlimited vacancies
- [#3825] Fix: ###EVENT_TYPE###: ###TITLE###" are not correctly replaced in HTML confirmation mail for attendes
- [#3831] Fix: Topic list is empty if a category is selected in the flexforms
- [#3820] Feature: Make it configurable which place fields in the FE editor are required
- [#3817] Fix: Calling the deprecated t3lib_div::GPvar floods the deprecation log
- [#3811] Feature: Filter the topic list automatically by the event types that are selected in the flexforms
- [#3806] Feature: Include the places ZIP in the thank-you e-mail to the participants
- [#3807] Feature: Include the places ZIP in the CSV export of events
- [#3805] Feature: Display the places ZIP in the single view
- [#3804] Feature: Add the places ZIP to the FE editor
- [#3803] Feature: Add a field "ZIP" to the places
- [#3220] Feature: On the second registration page, list the user's name at the beginning of the names list if "myself" has been checked
- [#3543] Fix: Multiple registrations when double-clicking submit-button
- [#3149] Fix: Search in list module ignores the the registration titles
- [#3792] Fix: Total price not shown on registration summary page
- [#3793] Change: The "my managed events" list should take timeframeInList into account
- [#3784] Fix: $this->iEdition not defined in addAdministrativeData
- [#3802] Fix: Test failures in latest TYPO3 due to changed icon paths
- [#3766] Fix: In the events CSV file, place not formatted correctly
- [#3778] Feature: Add some hooks for the registration and unregistration process
- [#3780] Feature: Add a relation event->registrations
- [#3777] Feature: Add Model_Event::getAvailablePrices
- [#955] Change: Drop mod1